Changelog
=========

1.3 - Unreleased
----------------


1.2 - 2009-10-10
----------------

* Add `ISchema` adapter using simple caching on the request in order to
  avoid redundant calculation of the (extended) schema.  The adapter is
  not enabled by default and can be activated by loading `caching.zcml`.
  [witsch]

* Avoid using the overridden `+` operator when copying the original schema
  as this will needlessly validate all fields again.
  [witsch]

* Added missing changelog entry.
  [hannosch, woutervh]

1.1 - 2009-06-03
----------------

* Added support for LinguaPlone language independent fields, by seamlessly
  using a new TranslatableExtensionField when LP is installed.
  [hannosch]

* Added a proper interface to the IExtensionField.
  [hannosch]

* Adjusted tests for Plone 3.3.
  [hannosch]

* Minor adjustment in documentation: a) don't adapt the class in the example,
  b) explain why named adapters are used.
  [jensens]

* Schema modifiers now also browserlayer-aware.
  [jessesnyder]

1.0 - 2008-07-17
----------------

* No changes since 1.0rc1.

1.0rc1 - 2008-04-07
-------------------

* Added optional plone.browserlayer support. Extenders implementing
  IBrowserLayerAwareExtender need to have a layer attribute. Those extenders
  are taken into account only if the specified layer is active.
  [jensens]

1.0b1 - 2007-12-07
------------------

* Schema modifiers implementing ISchemaModifier are now responsible for
  copying fields they modify. See README and the doc strings.
  [fschulze]

* Added a simple benchmark and made some optimizations by avoiding a lot
  of field copying.
  [fschulze, wiggy]

* Use a marker interface instead of overrides.zcml - this means you don't
  need to muck with overrides in dependent products.
  [optilude]

* Added code to allow addition of new schemata. We need an ordered
  dictionary to not bork the order of the schemata.
  [jensens]

* Add a small benchmark utility.
  [wichert]
