@@ -4,6 +4,12 @@ Changelog
 1.3 - Unreleased
 ----------------
 
+* Refactored the TranslatableExtensionField getMutator to directly reuse the
+  generatedMutatorWrapper from LinguaPlone itself. This avoids duplicating the
+  logic and lets schemaextender fields use the special reference field
+  handling introduced in LinguaPlone. This change introduces a version
+  requirement for LinguaPlone of at least 3.0b6.
+  [hannosch]
 
 1.2 - 2009-10-10
 ----------------
